# downloadtool

./: .dockerignore  .env.example  .gitignore  4k_youtube_videos.md  Cargo.toml  Makefile  README.md  deploy-log.md  idea.md  package.json  pagespeed.md  pnpm-lock.yaml  pnpm-workspace.yaml  preview-env-copy.txt  repomix-output.xml
.github/workflows/: ci.yml
.tmp/stitch/: extension-tools-hub.html  how-to-trust.html  minimalist-fetch-result-component.html
apps/extension/: build-extension.sh  manifest-edge.json  manifest-firefox.json  package.json  vite.background.config.ts  vite.config.ts  vite.popup.config.ts
apps/injector/: package.json  vite.config.ts  vite.userscript.config.ts
config/: runtime-limit-profiles.json
crates/api/: Cargo.toml
crates/api/app-migrations/: 0001_create_subscriptions.sql  0003_create_mux_jobs.sql  0009_drop_legacy_proxy_tables.sql  0011_create_playlist_jobs.sql  0012_set_mux_artifact_backend_default_to_s3.sql
crates/api/migrations/: 0002_create_mux_artifacts.sql  0004_expand_mux_jobs_for_worker_pipeline.sql  0005_add_mux_job_session_id.sql  0008_create_audit_events.sql  0010_add_mux_job_preferred_proxies.sql
crates/api/src/: config.rs  limit_profiles.rs  main.rs  validation.rs
crates/api/src/auth/: authenticated_user.rs  jwt_claims.rs  jwt_middleware.rs  mod.rs  user_tier.rs
crates/api/src/routes/: batch.rs  extract.rs  jobs.rs  mod.rs  mux_jobs.rs  openapi.rs  playlist_jobs.rs  static_files.rs  stream.rs  transcode.rs  whop_webhook.rs
crates/api/src/services/: auth_schema_bootstrap.rs  job_control_plane.rs  job_identity.rs  mod.rs  muxed_job_queue.rs  playlist_processor.rs  storage_ticket_service.rs
crates/extractor/: Cargo.toml  build.rs
crates/extractor/src/: engine.rs  hot_reload.rs  lib.rs  pool.rs  runtime.rs  runtime_limit_profiles.rs  types.rs  ytdlp.rs
crates/gpu-pipeline/: Cargo.toml
crates/gpu-pipeline/src/: decoder.rs  encoder.rs  ffi.rs  frame_queue.rs  lib.rs  pipeline.rs  watermark.rs
crates/gpu-worker/: Cargo.toml  build.rs
crates/gpu-worker/src/: lib.rs  main.rs  server.rs  transcode.rs
crates/job-system/: Cargo.toml
crates/job-system/src/: job_keying.rs  job_models.rs  job_progress.rs  lib.rs  playlist_job_models.rs  playlist_job_repository.rs  repository.rs  repository_create.rs  repository_finish.rs  repository_read.rs  repository_worker.rs
crates/muxer/: Cargo.toml
crates/muxer/src/: atom_framer.rs  box_parser.rs  codec.rs  fmp4_muxer.rs  fmp4_remuxer.rs  fragment_aligner.rs  fragment_stream.rs  init_segment_normalizer.rs  lib.rs  moov_merger.rs  mux_router.rs  stream_fetcher.rs  traf_merger.rs
crates/object-store/: Cargo.toml
crates/object-store/src/: backend_factory.rs  lib.rs  local_fs_storage_backend.rs  s3_multipart_upload.rs  s3_storage_backend.rs
crates/proxy/: Cargo.toml
crates/proxy/migrations/: 0001_create_proxy_inventory.sql  0002_add_proxy_quality_scoring.sql
crates/proxy/src/: anti_bot.rs  client.rs  cookie_store.rs  header_builder.rs  lib.rs  platform.rs  proxy_health_store.rs  proxy_inventory_store.rs  proxy_pool.rs  proxy_quarantine.rs  proxy_runtime.rs  proxy_schema.rs  stream.rs  throttle.rs
crates/queue/: Cargo.toml
crates/queue/src/: lib.rs  redis_streams.rs
crates/worker/: Cargo.toml
crates/worker/src/: job_progress_publisher.rs  job_runner.rs  main.rs  mux_pipeline.rs  storage_factory.rs  worker_config.rs
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.gpu-worker  Dockerfile.homeserver  Dockerfile.vps  Dockerfile.worker  docker-compose.homeserver.yml  docker-compose.local-dev.yml  docker-compose.server.yml  docker-compose.vps.yml
docs/: README.md  architecture_review.md  cloudflare-cache-checklist.md  code-standards.md  codebase-summary.md  frontend-performance-baseline.md  production_architecture_research.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
extractors/: types.ts  youtube-channel.ts  youtube-innertube.ts  youtube-n-transform.ts  youtube-playlist.ts  youtube.ts
frontend/: .env.example  _headers  better-auth.cli.ts  build-docker.mjs  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts
frontend/messages/: ar.json  bg.json  cs.json  da.json  de.json  el.json  en.json  es.json  et.json  fi.json  fr.json  hu.json  id.json  it.json  ja.json  ko.json  lt.json  lv.json  nb.json  nl.json  pl.json  pt-BR.json  pt.json  ro.json  ru.json  sk.json  sl.json  sv.json  tr.json  uk.json  vi.json  zh-TW.json  zh.json
frontend/project.inlang/: settings.json
frontend/scripts/: translate-all-messages.mjs
frontend/src/: app.css  app.d.ts  app.html  hooks.server.ts  service-worker.ts
frontend/static/: ads.txt  manifest.json  offline.html  robots.txt
infra/wireguard/: README.md  homeserver.conf  vps.conf
plans/260222-1238-video-downloader/: phase-01-project-scaffold.md  phase-02-extraction-layer.md  phase-03-stream-proxy.md  phase-04-antibot-layer.md  phase-05-cpu-muxer.md  phase-06-gpu-pipeline.md  phase-07-frontend.md  phase-08-ad-integration.md  plan.md
plans/260223-1345-youtube-download-timeout-and-n-param-fix/: phase-01-fix-timeout-bug.md  phase-02-implement-n-param-transform.md  plan.md
plans/260223-1520-format-picker-two-row-ui-auto-mux/: phase-01-extractor-stream-fields.md  phase-02-frontend-api-types.md  phase-03-format-picker-redesign.md  phase-04-download-btn-auto-mux.md  plan.md
plans/260223-1635-fmp4-box-remuxer/: phase-01-chunked-bypass-stream-fetcher.md  phase-02-box-parser.md  phase-03-moov-merger.md  phase-04-fmp4-remuxer.md  plan.md
plans/260224-1418-streaming-muxer-socks5/: phase-01-streaming-muxer-refactor.md  plan.md  (+1 more)
proto/: transcode.proto
scripts/: diagnose-extract-local-vs-deploy.sh  macos-yt-check-oneliner.txt  macos-yt-v-compare-oneliner.txt  server-yt-check-with-proxy-oneliner.txt  stress-compare-commits.sh  stress-test-all-endpoints.sh  stress-test-comprehensive-suite.sh  stress-test-muxed-ab-isolated.sh  stress-test-muxed-jobs.mjs  stress-test-muxed-only.sh  stress-test-refresh-probe.sh  stress-test-single-end-to-end.mjs
(+354 files in other folders)
