[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Video Downloader Team"]
license = "MIT"
repository = "https://github.com/example/downloadtool"

[workspace.dependencies]
# Async runtime
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "cookies", "gzip", "brotli", "deflate"] }

# JavaScript runtime for extractors
deno_core = "0.300"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Bytes handling
bytes = "1"
futures = "0.3"

# OpenAPI spec generation
utoipa = { version = "4", features = ["axum_extras"] }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
