[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
axum = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Configuration
config = { workspace = true }
dotenvy = { workspace = true }

# Tower middleware
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Streaming
bytes = "1"
futures = "0.3"
async-stream = "0.3"

# Internal crates
extractor = { path = "../extractor" }
proxy = { path = "../proxy" }
muxer = { path = "../muxer" }

# GPU support (optional)
gpu-pipeline = { path = "../gpu-pipeline", optional = true }
tonic = { workspace = true, optional = true }

[features]
default = []
gpu = ["dep:gpu-pipeline", "dep:tonic"]

[[bin]]
name = "api-server"
path = "src/main.rs"
