[package]
name = "extractor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# JavaScript runtime
deno_core = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client
reqwest = { workspace = true, features = ["socks"] }

# CPU count for pool sizing
num_cpus = "1"

# Logging
tracing = { workspace = true }
moka = { version = "0.12", features = ["future"] }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
proxy = { path = "../proxy" }

[dev-dependencies]
tokio-test = "0.4"
