[package]
name = "worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
bytes = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
job-system = { path = "../job-system" }
muxer = { path = "../muxer" }
object-store = { path = "../object-store" }
queue = { path = "../queue" }
reqwest = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
extractor = { path = "../extractor" }
proxy = { path = "../proxy" }

[[bin]]
name = "mux-worker"
path = "src/main.rs"
